tdf#112131 sd: check if SdrObjKind::UNO accepts hyperlink props

This fixes a form control's hyperlink being set by Insert - Hyperlink.

Calc and Writer do something similar - checking for ButtonType.

Change-Id: Ia36b216c8f749bc2a5dfba448a4771d9d7d50256
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158765
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>